Add a \code alias to the \texttt command
The \texttt will be used regularly and I don't want to write it out
every time.

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -4,10 +4,12 @@
 \usepackage[left=1.5cm, top=2cm, text={18cm, 25cm}]{geometry}
 \usepackage{hyperref}
 
+\newcommand{\code}{\texttt}
+
 \begin{document}
     \title{Internetové aplikace \\
-        Vytvoření webového API - Covid-19 data \\
-        \texttt{DOCUMENTATION}}
+        Vytvoření webového API - Covid-19 data \\\vspace{0.5cm}
+        \code{DOCUMENTATION}}
     \author{Matúš Škuta (xskuta04) \\ Patrik Németh (xnemet04)}
     \maketitle
 
