Add table with work division across the team

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -17,6 +17,14 @@
     \begin{center}
         Note: this documentation is in English to keep it consistent with the rest of
         the project.
+
+        \vspace{0.7cm}
+        \begin{tabular}{ r l }
+            \multicolumn{2}{ c }{Work division} \\
+            \hline
+            \textbf{xskuta04} & server (majority), client (minority), API design, documentation \\
+            \textbf{xnemet04} & client (majority), server (minority), API design, documentation \\
+        \end{tabular}
     \end{center}
 
     \section{Overview}
