Add TypeScript as a requirement to documentation

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -41,8 +41,9 @@
     client web application serving as an example for the possible usage of the API.
 
     \subsection{Requirements}
-    The server requires \emph{Node.js} version \code{14.x} with the \emph{npm} package manager, with which
-    all other dependencies will be automatically installed. The example client
+    The server requires \emph{Node.js} version \code{14.x} with the \emph{npm} package manager
+    and a TypeScript transpiler. The node package manager installs
+    all other dependencies automatically. The example client
     application requires an up-to-date web browser. All~installation instructions
     can be found in the \code{README.md} file in the top level directory of the project.
 
